--- a/browser/themes/shared/searchbar.inc.css
+++ b/browser/themes/shared/searchbar.inc.css
@@ -371,210 +371,12 @@ search
 one
 -
 offs
->
-.
-search
--
-panel
--
-header
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-.
-search
--
-panel
--
-one
--
-offs
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-vbox
->
-.
-addengine
--
-item
-:
-first
--
-of
--
-type
 {
 border
 -
 top
 :
 none
-;
-}
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-.
-searchbar
--
-engine
--
-one
--
-off
--
-item
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-.
-search
--
-panel
--
-current
--
-input
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-.
-search
--
-panel
--
-one
--
-offs
-.
-search
--
-panel
--
-tree
-[
-collapsed
-=
-true
-]
-+
-.
-search
--
-one
--
-offs
->
-vbox
->
-.
-addengine
--
-item
-:
-last
--
-of
--
-type
-{
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-panel
--
-separator
--
-color
-)
 ;
 }
 .
@@ -654,6 +456,26 @@ flex
 wrap
 :
 wrap
+;
+/
+*
+Show
+at
+least
+3
+buttons
+*
+/
+min
+-
+width
+:
+calc
+(
+48px
+*
+3
+)
 ;
 }
 .
